# pi-drone-nav

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  TIMELINE.md  TODO.md  pyproject.toml  requirements.txt  setup.py
config/: betaflight_setup.txt  default.yaml  pidrone.service
config/missions/: sample_mission.json  test_hover_2m.json
docs/: betaflight_rx_msp_cli_bug.md
scripts/: emergency_stop.py  emergency_stop.sh  install.sh  motor_test.py  simulate.py  test_cli.py  test_takeoff.py
simulation/: __init__.py  launcher.py
simulation/adapters/: __init__.py  run_with_sim.py  sim_gps_driver.py  sim_msp_driver.py
simulation/gazebo/: __init__.py  betaflight_gazebo_bridge.py  gazebo_launcher.py  physics_bridge.py  sensor_bridge.py
simulation/pybullet/: __init__.py  debug_sitl_udp.py  drone_sim.py  run_mission.py  run_sitl_sim.py  sitl_bridge.py  tcp_serial.py  test_bridge_headless.py  test_sitl_udp.py
simulation/scripts/: fly_in_gazebo.py  install_gazebo.sh  launch_gazebo.sh  run_full_sim.sh  run_mission.py  run_mission_full.py  test_integration.py
simulation/sitl/: __init__.py  betaflight_process.py  config_sync.py  configure_sitl.py
src/: __init__.py  config.py  main.py
src/cli/: __init__.py  client.py  main.py
src/drivers/: __init__.py  gps_ubx.py  msp.py  serial_manager.py
src/flight/: __init__.py  flight_controller.py  (+4 more)
tests/: __init__.py  conftest.py  test_gps.py  test_heading_estimator.py  test_l1_controller.py  test_mission.py  test_msp.py  test_navigation.py  test_path_planner.py  test_pid.py  test_state_machine.py
web/: drone_control.html
(+28 files in other folders)
